Tweaks to tilemill server conf files.

--- a/platforms/ubuntu/debian/tilemill.conf
+++ b/platforms/ubuntu/debian/tilemill.conf
@@ -6,5 +6,5 @@ stop on shutdown
 respawn
 
 script
-  su -s /bin/sh -c 'NODE_ENV=production HOME=/usr/share/mapbox /usr/bin/node /usr/share/tilemill/index.js --config=/etc/tilemill/tilemill.config >> /var/log/tilemill/tilemill.log 2>&1' mapbox
+  su -s /bin/sh -c 'HOME=/usr/share/mapbox /usr/bin/node /usr/share/tilemill/index.js --config=/etc/tilemill/tilemill.config >> /var/log/tilemill/tilemill.log 2>&1' mapbox
 end script
