--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
         "bones": "~1.3.20",
         "chrono": "~1.0.1",
         "JSV": "3.5.x",
-        "mbtiles": "https://github.com/mapbox/node-mbtiles/tarball/skipblank",
+        "mbtiles": "~0.1.2",
         "sax": "0.1.x",
         "request": "1.9.x",
         "step": "0.0.x",
-        "tilelive": "https://github.com/mapbox/tilelive.js/tarball/skipblank",
+        "tilelive": "https://github.com/mapbox/tilelive.js/tarball/skipblank2",
         "mapnik": "https://github.com/mapnik/node-mapnik/tarball/node_v4",
         "millstone": "~0.3.0",
         "sphericalmercator": "~1.0.1",
